[package]
name = "thin-dst"
version = "1.0.0-beta.3"
edition = "2018"

authors = ["cad97 <cad97@cad97.com>"]
description = "Thin pointers to inline-slice dynamically sized types"

repository = "https://github.com/cad97/thin-dst"
keywords = ["thin", "thin-pointer", "dst"]
license = "MIT OR Apache-2.0"
