[package]
name = "thin-dst"
version = "1.1.0"
edition = "2018"
description = "Thin pointers to inline-slice dynamically sized types"

authors = ["Christopher Durham (CAD97) <cad97@cad97.com>"]

repository = "https://github.com/cad97/thin-dst"
readme = "README.md"
keywords = ["thin", "thin-pointer", "dst"]
categories = ["no-std", "data-structures", "memory-management"]
license = "MIT OR Apache-2.0"

[badges]
maintenance = { status = "deprecated" }
